# space_crystals

./: .gitignore  CLAUDE.md  Cargo.toml  PROGRESS.md  build_qa_artifact.sh  check_pipeline.sh  claude.md  framework.md  pipeline.yaml  run_qa.sh  run_supervisor.sh  tag_qa_steps.py
agents/: developer.md  (+2 more)
artifacts/developer/: Cargo.toml  insights.md  log.md
artifacts/developer/src/: README.md  lib.rs  main.rs
artifacts/developer/src/game/: README.md  utils.rs
artifacts/developer/src/game/combat/: mod.rs  types.rs  utils.rs
artifacts/developer/src/game/combat/systems/: README.md  behaviors.rs  core.rs  utils.rs
artifacts/developer/src/game/types/: factions.rs  objects.rs  structures.rs  types.rs
artifacts/developer/src/game/units/: mod.rs  utils.rs
artifacts/developer/src/game/world/: README.md  faction.rs  map.rs  mod.rs  resources.rs  types.rs
artifacts/developer/src/shared/: README.md  mod.rs  types.rs
artifacts/developer/src/shared/testing/: README.md  harness.rs  mod.rs  test_app.rs  types.rs  utils.rs
artifacts/developer/src/simulation/: mod.rs  types.rs
artifacts/developer/src/simulation/diagnostics/: instrumentation.rs  types.rs
artifacts/developer/src/ui/: README.md  command_panel.rs  hud.rs  menu.rs  mod.rs  types.rs  utils.rs
artifacts/developer/tests/qa/: agent_object_interface_state.rs  automated_qa_ui_state_queries.rs  autonomous_targeting.rs  back_button_hotkey_consistency.rs  basic_combat_unit_interface_state.rs  box_selection_priority.rs  combat_behaviors.rs  command_panel_and_interface_state_machine.rs  construction_hp_rule.rs  damage_calculation_and_directional_armor.rs  enter_command_and_entering_tunnel_behavior.rs  fix_left_click_command_target.rs  fix_memory_leak_oom_freeze.rs  fix_units_moving_while_attacking.rs  gdo_supply_tower_and_chopper.rs  grid_coverage_full_map.rs  ground_unit_collision.rs  headquarters_stats_correction.rs  main.rs  pathfinding_diagonal_and_oscillation_fix.rs  syndicate_agent_unit.rs  tunnel_object_interface_state.rs  tunnel_structure_and_network.rs  unit_cap_systems.rs  viewport_black_line_glitch.rs  worker_built_structure_arrival_validation.rs
artifacts/developer/tests/scenarios/: main.rs
(+1107 files in other folders)
