[package]
name = "space_crystals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.17"
default-features = false
features = [
    "std",
    "async_executor",
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_post_process",
    "bevy_anti_alias",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_image",
    "bevy_mesh",
    "bevy_camera",
    "bevy_light",
    "bevy_shader",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_window",
    "custom_cursor",
    "default_font",
    "hdr",
    "ktx2",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "x11",
    "debug",
    "zstd_rust",
]

# Enable optimizations for dependencies in dev mode (faster runtime, slower compile)
[profile.dev.package."*"]
opt-level = 3

# Optimize our code a bit in dev mode for better performance
[profile.dev]
opt-level = 1

# Use dynamic linking for faster compile times during development
[features]
default = ["dynamic_linking"]
dynamic_linking = ["bevy/dynamic_linking"]
diagnostics = []
testing = []
